# me1ody-ai-search

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  render.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.docker.txt
backend/app/: config.py  main.py
backend/app/models/: db.py  schemas.py
backend/app/routers/: history.py  search.py  suggest.py
backend/app/services/: deepseek_client.py  demo.py  embeddings.py  evaluation.py  reranker.py  source_processing.py  synthesis.py  tavily_client.py  vector_store.py
backend/app/utils/: logging.py  prompts.py  security.py  user_context.py
backend/evals/: demo_cases.json  sample_predictions.json
backend/me1ody_ai_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: evaluate_demo.py
backend/tests/: test_engineering.py  test_evaluation.py  test_prompt_reliability.py  test_source_processing.py  test_stage_one_rag.py
docs/: evaluation_report.md  free_deployment_no_card.md  interview_guide.md  render_deployment.md
frontend/: .dockerignore  index.html  package-lock.json  package.json
frontend/src/: App.vue  shims-vue.d.ts
frontend/src/assets/: main.css
frontend/src/components/: AppHeader.vue  ConversationView.vue  FollowUpQuestions.vue  PipelineStatus.vue  SearchBar.vue  SearchHome.vue  SourceCard.vue  SourceList.vue  StreamingAnswer.vue
frontend/src/composables/: useConversation.ts  useSearch.ts  useSuggestions.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
