[project]
name = "me1ody-ai-search"
version = "0.1.0"
description = "AI Search Engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "langchain>=0.3",
    "langchain-tavily>=0.2",
    "langchain-deepseek>=0.1",
    "langchain-openai>=0.3",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "faiss-cpu>=1.8",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]
